@@ -1,3 +1,9 @@
+2018-01-24  Ian Lance Taylor  <iant@golang.org>
+
+	PR other/68239
+	* mmap.c (backtrace_free_locked): Don't put more than 16 entries
+	on the free list.
+
 2018-01-19  Tony Reix  <tony.reix@atos.net>
 
 	* xcoff.c (xcoff_incl_compare): New function.
